Move bool enable_brotli from HttpNetworkSession::Params

Moving bool enable_brotli from HttpNetoworkSession::Params
to URLRequestContext.

Brotli is set on thread initialization and profileiodata initialization.
Then it is propagated to other contexts through
URLRequestContext::CopyFrom method.

BUG=600450

Review-Url: https://codereview.chromium.org/1922403002
Cr-Commit-Position: refs/heads/master@{#390930}

Former-commit-id: 3d40c8112303a985fab79c74e92e9a79fc4ac9f9