net/url_request/url_request_context.cc
@@ -35,7 +35,8 @@ URLRequestContext::URLRequestContext()
       sdch_manager_(nullptr),
       network_quality_estimator_(nullptr),
       url_requests_(new std::set<const URLRequest*>),
-      has_known_mismatched_cookie_store_(false) {}
+      has_known_mismatched_cookie_store_(false),
+      enable_brotli_(false) {}
 
 URLRequestContext::~URLRequestContext() {
   AssertNoURLRequests();
@@ -62,6 +63,7 @@ void URLRequestContext::CopyFrom(const URLRequestContext* other) {
   set_sdch_manager(other->sdch_manager_);
   set_http_user_agent_settings(other->http_user_agent_settings_);
   set_network_quality_estimator(other->network_quality_estimator_);
+  set_enable_brotli(other->enable_brotli_);
 }
 
 const HttpNetworkSession::Params* URLRequestContext::GetNetworkSessionParams(
